<resources>
    <string name="app_name">IntervalTimer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="interval">Interval:</string>
    <string name="colon">00:00</string>
    <string name="sound1">Beep</string>
    <string name="sound2">Chime</string>
    <string name="sound3">Four Beeps</string>
    <string name="SoundQ">Sound Options:</string>
    <string name="changeButton">Change Sound</string>
    <string name="static_shortcut_label_short">Open</string>
    <string name="static_shortcut_label_long">Open Timer</string>
    <string name="static_shortcut_disabled_message">Open Timer Shortcut Disabled</string>
    <string name="defaultChannel">IntervalTimer default channel</string>
    <string name="notificationDescription">Notifications from IntervalTimer</string>
    <string name="deepLinkNotificationTitle">Deep Link</string>
    <string name="timerRunning">Timer is Running</string>
    <string name="IntervalTextDescription">Interval Length</string>
    <string name="SettingsButton">Settings Button</string>
    <string name="setIntervalColon">:</string>
    <string name="set_interval">Set Interval</string>

</resources>